# tech-challenger-5

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml  quick_train.py  requirements.txt  test_request.json
app/: main.py
data/: sample_candidates.csv
models/: training_metadata.json
monitor/: generate_report.py
src/: data.py  features.py  schema.py  train.py
src/models/: training_metadata.json
tests/: conftest.py  test_api.py  test_data.py
